<resources>
    <string name="app_name">Contact Manager</string>

    <string name="search_by_name">Search by name</string>
    <string name="add_contact">Add contact</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="phone_number">Phone number</string>
    <string name="email">Email</string>
    <string name="company">Company</string>
    <string name="job_title">Job title</string>
    <string name="address">Address</string>
    <string name="website">Website</string>
    <string name="notes">Notes</string>
    <string name="save">Save</string>
    <string name="call">Call</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="export">Export</string>
    <string name="add_contact_title">Add Contact</string>
    <string name="edit_contact">Edit Contact</string>
    <string name="delete_contact">Delete Contact</string>
    <string name="delete_confirmation">Delete %1$s?</string>
    <string name="contact_added">Contact added</string>
    <string name="contact_updated">Contact updated</string>
    <string name="name_required">At least one name is required</string>
    <string name="phone_required">Phone number is required</string>
    <string name="import_contact_via">Import contact via…</string>
    <string name="export_error">Could not create VCF file</string>
    <string name="import_from_vcard">Import from vCard (.vcf)</string>
    <string name="import_success">%1$d contact(s) imported</string>
    <string name="import_error">Could not read vCard file</string>
    <string name="export_to_phone_contacts">Export to Phone Contacts</string>
</resources>